tests/suite/fail/generated/types/fail_assign_bool_to_i32_2.ny
fn main() {
    let x: i32 = true //~ ERROR Type mismatch
    print(0)
}
